# Matrix

./: .gitignore  CMakeLists.txt
include/: Matrix.hpp  debug.hpp
src/: Matrix.cpp  main.cpp
test/: test.sh  test7.dat.ans  test8.dat.ans
